--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <section>
+        <div class="container">
+            <h2>Ejercicio 1</h2>
+
+            <ol>
+                <li>Se abre un prompt que consolta tu edad</li>
+                <li>Si la edad es menor a 18, se abrirá un alert diciendo cuantos años le faltan para poder ingresar</li>
+                <li>Si la edad es mayor a 18, se abrirá un prompt pidiendo ingresar el nombre</li>
+                <li>Se ejecturá un alert dando la bienvenida y mostrando el nombre ingresado</li>
+            </ol>
+        </div>
+    </section>
 
 </body>
 <script src="main.js"></script>
