--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 1</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,6 +16,8 @@
 
             <ol>
                 <li>Se abre un prompt que consolta tu edad</li>
+                <li>Valido que el dato ingresado sea un numero</li>
+                <li>Si no es numero se ejecuta un alert diciendo que ingrese un numero</li>
                 <li>Si la edad es menor a 18, se abrirá un alert diciendo cuantos años le faltan para poder ingresar</li>
                 <li>Si la edad es mayor a 18, se abrirá un prompt pidiendo ingresar el nombre</li>
                 <li>Se ejecturá un alert dando la bienvenida y mostrando el nombre ingresado</li>
