--- a/index.html
+++ b/index.html
@@ -6,25 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
     
     <section>
         <div class="container">
-            <h2>Ejercicio 1</h2>
-
-            <ol>
-                <li>Se abre un prompt que consolta tu edad</li>
-                <li>Valido que el dato ingresado sea un numero</li>
-                <li>Si no es numero se ejecuta un alert diciendo que ingrese un numero</li>
-                <li>Si la edad es menor a 18, se abrirá un alert diciendo cuantos años le faltan para poder ingresar</li>
-                <li>Si la edad es mayor a 18, se abrirá un prompt pidiendo ingresar el nombre</li>
-                <li>Se ejecturá un alert dando la bienvenida y mostrando el nombre ingresado</li>
-            </ol>
+            <div class="row">
+                <div class="col my-5">
+                    <h2>Ejercicio 1</h2>
+                    <ol>
+                        <li>Ingresa tu edad en el input</li>
+                        <li>Valido que el dato ingresado sea un numero</li>
+                        <li>Si el dato ingresado no es numero, se ejecuta un alert diciendo que ingrese un numero</li>
+                        <li>Si la edad es menor a 18, se abrirá un alert diciendo cuantos años le faltan para poder ingresar</li>
+                        <li>Si la edad es mayor a 18, se abrirá un prompt pidiendo ingresar el nombre</li>
+                        <li>Se ejecturá un alert dando la bienvenida y mostrando el nombre ingresado</li>
+                    </ol>
+                </div>
+            </div>
         </div>
     </section>
 
+    <section>
+        <div class="container">
+            <div class="row dflex justify-content-center">
+                <div class="col-6 shadow-lg p-3 mb-5 bg-body rounded"> 
+                    <form class="row g-3">
+                        <div class="col-auto">
+                          <label for="inputEdad" class="visually-hidden">Ingresa tu edad</label>
+                          <input type="input" class="form-control" id="inputEdad" placeholder="Ingresa tu edad">
+                        </div>
+                        <div class="col-auto">
+                          <button type="submit" class="btn btn-primary" onclick="ingresarEdad()">confirmar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+        </div>   
+    </section>
+
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 <script src="main.js"></script>
 </html>
