--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section>
         <div class="container">
             <div class="row dflex justify-content-center">
-                <div class="col-6 shadow-lg p-3 mb-5 bg-body rounded"> 
+                <div class="col-auto shadow-lg p-3 mb-5 bg-body rounded"> 
                     <form class="row g-3">
                         <div class="col-auto">
                           <label for="inputEdad" class="visually-hidden">Ingresa tu edad</label>
