--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <h2>Ejercicio 1</h2>
 
             <ol>
-                <li>Se abre un prompt que consulta tu edad</li>
+                <li>Se abre un prompt que solicita tu nombre (debe ser sin numeros, solo texto)</li>
+                <li>Después se ejecuta un prompt solicitando tu edad</li>
                 <li>Si la edad es menor a 18, se abrirá un alert diciendo cuantos años le faltan para poder ingresar</li>
                 <li>Si la edad es mayor a 18, se abrirá un prompt pidiendo ingresar el nombre</li>
                 <li>Se ejecturá un alert dando la bienvenida y mostrando el nombre ingresado</li>
